Fix typo in twitter conditional tweet configuration help text - replace %gt; with correct &gt;

--- a/html/controls/twitter.html
+++ b/html/controls/twitter.html
@@ -124,8 +124,8 @@
       <li><b>!=</b> : True if the event value is not equal to the provided value</li>
       <li><b>&lt;</b> : True if the event value is less than the provided value</li>
       <li><b>&lt;=</b> : True if the event value is less than or equal to the provided value</li>
-      <li><b>%gt;</b> : True if the event value is greater than the provided value</li>
-      <li><b>%gt;=</b> : True if the event value is greater than or equal to the provided value</li>
+      <li><b>&gt;</b> : True if the event value is greater than the provided value</li>
+      <li><b>&gt;=</b> : True if the event value is greater than or equal to the provided value</li>
       <li><b>%</b> : True if the event value mod the provided value is zero</li>
     </ul>
     Note that the % comparator is essentially an "every Nth" operator;
