Adjust whitespace in mobile.html, and fix typo of <button>...</a> to <button>...</button>

--- a/html/controls/mobile.html
+++ b/html/controls/mobile.html
@@ -94,6 +94,7 @@
     <p><button id="BtnJammerCancel">Cancel this</button></p>
   </div>
 </div>
+
 <div data-role="page" id="JamControlPage">
   <div data-role="header">
     <a href="#Main" data-direction="reverse" data-icon="arrow-l">Main</a>
@@ -101,30 +102,30 @@
   </div>
 
   <div data-role="content">
-        <table>
-        	<tr><td><div class="ui-block-a" id="period">Period<br/><span id="periodno"></span></div></td>
-        	<td><div class="ui-block-b" id="periodtime"><a>0:00</a></div></td>
-        </table>
-        <div id="jamdiv" style="display: none"><h2>Jam Time</h2><h1>1:59</h1></div>
-        <div id="lineupdiv" style="display: none"><h2>Lineup Time</h2><h1>1:59</h1></div>
-        <div id="timeoutdiv" style="display: none"><h2>TIMEOUT Time</h2><h1>1:59</h1></div>
-        <!--  As we're using position: absolute, the easiest way to fix this is just to put
-        some blank space in the same place the data will go. -->
-        <div id="spacer"><h2>&nbsp;</h2><h1>&nbsp</h1></div>
-        <div class="ui-grid-a">
-        	<div class="ui-block-a">
+    <table>
+      <tr><td><div class="ui-block-a" id="period">Period<br/><span id="periodno"></span></div></td>
+        <td><div class="ui-block-b" id="periodtime"><a>0:00</a></div></td>
+    </table>
+    <div id="jamdiv" style="display: none"><h2>Jam Time</h2><h1>1:59</h1></div>
+    <div id="lineupdiv" style="display: none"><h2>Lineup Time</h2><h1>1:59</h1></div>
+    <div id="timeoutdiv" style="display: none"><h2>TIMEOUT Time</h2><h1>1:59</h1></div>
+    <!--  As we're using position: absolute, the easiest way to fix this is just to put
+          some blank space in the same place the data will go. -->
+    <div id="spacer"><h2>&nbsp;</h2><h1>&nbsp</h1></div>
+    <div class="ui-grid-a">
+      <div class="ui-block-a">
 				<button class="StartJam" data-role="button" data-icon="check" data-iconpos="right">Start Jam</button>
-            </div>
-            <div class="ui-block-b">
-                <button class="StopJam" data-role="button" data-icon="plus" data-iconpos="left">Stop Jam</a>
-            </div>
-        </div>
-        <button class="Timeout" data-role="button">Timeout</button>
-        <div class="ui-grid-b">
-        	<div class="ui-block-a"><button id="team1timeout">Team 1</button></div>
-        	<div class="ui-block-b"><button id="officialtimeout">Official</button></div>
-        	<div class="ui-block-c"><button id="team2timeout">Team 2</button></div>
-        </div>
+      </div>
+      <div class="ui-block-b">
+        <button class="StopJam" data-role="button" data-icon="plus" data-iconpos="left">Stop Jam</button>
+      </div>
+    </div>
+    <button class="Timeout" data-role="button">Timeout</button>
+    <div class="ui-grid-b">
+      <div class="ui-block-a"><button id="team1timeout">Team 1</button></div>
+      <div class="ui-block-b"><button id="officialtimeout">Official</button></div>
+      <div class="ui-block-c"><button id="team2timeout">Team 2</button></div>
+    </div>
     <p class="Clocks">
       <span class="ClockBubble Period">Period</span>
       <span class="ClockBubble Jam">Jam</span>
