Hide 'Update Media'
This is part of the discussion going on in the scoreboard developers
thread. Its one of the changes we want to be able to do a 0.3.

--- a/html/controls/media_management.html
+++ b/html/controls/media_management.html
@@ -25,7 +25,7 @@
     <li><a href="#CustomHtml">Custom Page</a></li>
     <button class="Remove">Remove Type</button>
     <button class="Add">Add Unavailable Media</button>
-    <button class="Update">Update Media</button>
+    <!-- <button class="Update">Update Media</button> -->
   </ul>
 </div>
 
