Comment out more buttons
Reading through the email I just noticed all three of these were to go
so I've put them in the same comment block.

--- a/html/controls/media_management.html
+++ b/html/controls/media_management.html
@@ -23,9 +23,9 @@
     <li><a href="#Images">Image</a></li>
     <li><a href="#Videos">Video</a></li>
     <li><a href="#CustomHtml">Custom Page</a></li>
-    <button class="Remove">Remove Type</button>
+    <!-- <button class="Remove">Remove Type</button>
     <button class="Add">Add Unavailable Media</button>
-    <!-- <button class="Update">Update Media</button> -->
+    <button class="Update">Update Media</button> -->
   </ul>
 </div>
 
