Update media_management page remove media buttons to use new MediaServlet api to actually remove media file from disc

--- a/html/controls/media_management.html
+++ b/html/controls/media_management.html
@@ -61,6 +61,16 @@
 	</tbody>
 </table>
 
+<div class="RemoveMediaDialog DialogTemplate">
+	<p>Media file : <a class="File"></a></p>
+	<p class="Warning">
+		This will delete the media file from your system.
+		You cannot undo this operation.
+	</p>
+	<p class="Confirm">Are you sure?</p>
+	<p class="Status"></p>
+</div>
+
 <div class="UploadMediaDialog DialogTemplate">
 	<p><div class="Upload"></div></p>
 	<p><a class="File">File:</a><input class="File" type="file" multiple/></p>
