Update main index.html page with new text describing how to add/remove media files

--- a/html/index.html
+++ b/html/index.html
@@ -52,8 +52,14 @@ $(function() {
         The scoreboard no longer includes any team logos or sponsor (ad) images.
         The team logo images are now packaged separately.
         To get the latest team logo images, go to the
+				<a href="http://sourceforge.net/projects/derbyscoreboard/files/crg-scoreboard/media/">sourceforge download area for media zip files</a>
+				and download the latest crg-scoreboard-images-teamlogo zip file.  Then go to the
         <a href="controls/media_management.html">Media Management page</a>
-        and click on <i>Update Media</i> at the top-right of the page.
+        and on the <i>Image</i> tab click the <i>Upload</i> button on the right side of the
+				<i>Type: teamlogo</i> section, and upload the entire zip file of teamlogos.
+				Alternately, you can just upload whatever individual team logo images you have.
+				You can also add or remove team logo (or sponsor/ad) images by simply adding or
+				removing files from the html/images/teamlogo (or sponsor_banner) directory.
       </p>
 
       <p>
