--- a/html/controls/mobile.html
+++ b/html/controls/mobile.html
@@ -33,7 +33,9 @@
 			<li><a href="#JamControlPage">Jam Control</a></li>
 			<li><a href="#PeriodTimePage">Period Time</a></li>
 			<li><a href="#TeamScorePage">Team Score</a></li>
+<!-- hide link for next release, then work on using on-server clocks
 			<li><a href="#PenaltyPage">Penalty Timing</a></li>
+-->
 		</ul>
 	</div>
 </div>
