--- a/html/index.html
+++ b/html/index.html
@@ -41,6 +41,8 @@ $(function() {
 			<a href="controls/mobile.html">Mobile Device Operator Controls</a><br/>
 			<a href="controls/media_management.html">Media Management</a><br/>
 			<a href="views/overlay.html">Video Feed Overlay Scoreboard</a><br/>
+			<a href="views/wo.html">WFTDA Video Feed Overlay Scoreboard</a><br/>
+			<a href="controls/wo.html">Team Name Controls for WFTDA Video Feed Overlay Scoreboard</a><br/>
 			<a href="controls/stream.html">Load/Save Scoreboard "Stream" (beta quality!)</a><br/>
 			<a href="controls/twitter.html">Twitter update controls (beta quality!)</a><br/>
 			<a href="controls/lineups.html">Team Lineup Control Panel (beta quality!)</a><br/>
