--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,8 @@ $(function() {
 			<a href="views/scoreboard.html">Main Scoreboard</a><br/>
 			<a href="controls/mobile.html">Mobile Device Operator Controls</a><br/>
 			<a href="controls/media_management.html">Media Management</a><br/>
-			<a href="views/overlay.html">Video Feed Overlay Scoreboard</a><br/>
+			<a href="views/overlay.html">Video Feed Image Overlay Scoreboard</a><br/>
+			<a href="views/overlay-css.html">Video Feed CSS Overlay Scoreboard</a><br/>
 			<a href="views/wo.html">WFTDA Video Feed Overlay Scoreboard</a><br/>
 			<a href="controls/wo.html">Team Name Controls for WFTDA Video Feed Overlay Scoreboard</a><br/>
 			<a href="controls/stream.html">Load/Save Scoreboard "Stream" (beta quality!)</a><br/>
