--- a/html/index.html
+++ b/html/index.html
@@ -40,10 +40,10 @@ $(function() {
 			<a href="views/scoreboard.html">Main Scoreboard</a><br/>
 			<a href="controls/mobile.html">Mobile Device Operator Controls</a><br/>
 			<a href="controls/media_management.html">Media Management</a><br/>
-			<a href="views/overlay.html">Video Feed Image Overlay Scoreboard</a><br/>
-			<a href="views/overlay-css.html">Video Feed CSS Overlay Scoreboard</a><br/>
-			<a href="views/wo.html">WFTDA Video Feed Overlay Scoreboard</a><br/>
-			<a href="controls/wo.html">Team Name Controls for WFTDA Video Feed Overlay Scoreboard</a><br/>
+			<a href="views/overlay-4x3.html">Video Feed 4x3 Overlay Scoreboard</a><br/>
+			<a href="views/overlay-16x9.html">Video Feed 16x9 Overlay Scoreboard</a><br/>
+			<a href="views/wo.html">WFTDA Styled Video Feed 16x9 Overlay Scoreboard</a><br/>
+			<a href="controls/wo.html">Team Name Controls for WFTDA Styled Overlay Scoreboard</a><br/>
 			<a href="controls/stream.html">Load/Save Scoreboard "Stream" (beta quality!)</a><br/>
 			<a href="controls/twitter.html">Twitter update controls (beta quality!)</a><br/>
 			<a href="controls/lineups.html">Team Lineup Control Panel (beta quality!)</a><br/>
