--- a/html/controls/mobile.html
+++ b/html/controls/mobile.html
@@ -119,14 +119,20 @@
 				<button class="StartJam" data-role="button" data-icon="check" data-iconpos="right">Start Jam</button>
 			</div>
 			<div class="ui-block-b">
-				<button class="StopJam" data-role="button" data-icon="plus" data-iconpos="left">Stop Jam</button>
+				<button class="StopJam" data-role="button" data-icon="delete" data-iconpos="left">Stop Jam</button>
 			</div>
 		</div>
 		<button class="Timeout" data-role="button">Timeout</button>
 		<div class="ui-grid-b Timeout">
-			<div class="ui-block-a"><button class="Team1"><a class="Name"></a></button></div>
+			<div class="ui-block-a"><button class="Team1">
+				<span class="Team1 Name">Team 1</span>
+				<span class="Team1 AlternateName"></span>
+			</button></div>
 			<div class="ui-block-b"><button class="Official">Official</button></div>
-			<div class="ui-block-c"><button class="Team2"><a class="Name"></a></button></div>
+			<div class="ui-block-c"><button class="Team2">
+				<span class="Team2 Name">Team 2</span>
+				<span class="Team2 AlternateName"></span>
+			</button></div>
 		</div>
 		<p class="Clocks">
 			<span class="ClockBubble Period">Period</span>
@@ -165,8 +171,16 @@
 		<ul data-role="listview">
 			<li><a href="#TeamSetScorePage">Both Teams Set Score</a></li>
 			<li><a href="#TeamBothScorePage">Both Teams Manage Score</a></li>
-			<li><a href="#Team1ScorePage"><span class="Team1 Name"></span> Manage Score</a></li>
-			<li><a href="#Team2ScorePage"><span class="Team2 Name"></span> Manage Score</a></li>
+			<li><a href="#Team1ScorePage">
+				<span class="Team1 Name"></span>
+				<span class="Team1 AlternateName"></span>
+				Manage Score
+			</a></li>
+			<li><a href="#Team2ScorePage">
+				<span class="Team2 Name"></span>
+				<span class="Team2 AlternateName"></span>
+				Manage Score
+			</a></li>
 		</ul>
 	</div>
 </div>
@@ -178,14 +192,20 @@
 	</div>
 
 	<div data-role="content">
-		<div><a class="Team1 Name"></a></div>
+		<div>
+			<a class="Team1 Name"></a>
+			<a class="Team1 AlternateName"></a>
+		</div>
 		<div><a class="Team1 Score"></a></div>
 		<div>
 			<input type="number" class="Team1 SetScore"/>
 			<button class="Team1 SetScore" data-inline="true">Set Score</button>
 		</div>
 
-		<div><a class="Team2 Name"></a></div>
+		<div>
+			<a class="Team2 Name"></a>
+			<a class="Team2 AlternateName"></a>
+		</div>
 		<div><a class="Team2 Score"></a></div>
 		<div>
 			<input type="number" class="Team2 SetScore"/>
@@ -204,7 +224,10 @@
 	<div data-role="content">
 
 		<div data-role="collapsible" class="Orientation Portrait HV Vertical">
-			<h3><a class="Team1 Name"></a></h3>
+			<h3>
+				<a class="Team1 Name"></a>
+				<a class="Team1 AlternateName"></a>
+			</h3>
 			<div class="ui-grid-b">
 				<div class="ui-block-a">
 					<button class="Team1 ScoreDown" data-inline="true" value="-1">-1</button>
@@ -247,7 +270,10 @@
 		</div>
 
 		<div data-role="collapsible" class="Orientation Portrait HV Vertical">
-			<h3><a class="Team2 Name"></a></h3>
+			<h3>
+				<a class="Team2 Name"></a>
+				<a class="Team2 AlternateName"></a>
+			</h3>
 			<div class="ui-grid-b">
 				<div class="ui-block-a">
 					<button class="Team2 ScoreDown" data-inline="true" value="-1">-1</button>
@@ -292,6 +318,7 @@
 		<div class="ui-grid-a Orientation Landscape HV Vertical">
 			<div class="ui-block-a">
 				<a class="Team1 Name"></a>
+				<a class="Team1 AlternateName"></a>
 				<div class="ui-grid-b">
 					<div class="ui-block-a">
 						<button class="Team1 ScoreDown" data-inline="true" value="-1">-1</button>
@@ -334,6 +361,7 @@
 			</div>
 			<div class="ui-block-b">
 				<a class="Team2 Name"></a>
+				<a class="Team2 AlternateName"></a>
 				<div class="ui-grid-b">
 					<div class="ui-block-a">
 						<button class="Team2 ScoreDown" data-inline="true" value="-1">-1</button>
@@ -377,7 +405,10 @@
 		</div>
 
 		<div class="HV Horizontal">
-			<div><a class="Team1 Name"></a></div>
+			<div>
+				<a class="Team1 Name"></a>
+				<a class="Team1 AlternateName"></a>
+			</div>
 			<div><a class="Team1 Score"></a></div>
 			<div class="ui-grid-d">
 				<div class="ui-block-a">
@@ -411,7 +442,10 @@
 					<button class="Team1 ScoreDown" data-inline="true" value="-5">-5</button>
 				</div>
 			</div>
-			<div><a class="Team2 Name"></a></div>
+			<div>
+				<a class="Team2 Name"></a>
+				<a class="Team2 AlternateName"></a>
+			</div>
 			<div><a class="Team2 Score"></a></div>
 			<div class="ui-grid-d">
 				<div class="ui-block-a">
@@ -453,11 +487,18 @@
 <div data-role="page" id="Team1ScorePage">
 	<div data-role="header">
 		<a href="#TeamScorePage" data-direction="reverse" data-icon="arrow-l">Score</a>
-		<h1><span class="Team1 Name"></span> Score</h1>
+		<h1>
+			<span class="Team1 Name"></span>
+			<span class="Team1 AlternateName"></span>
+			Score
+		</h1>
 	</div>
 
 	<div data-role="content">
-		<div><a class="Team1 Name"></a></div>
+		<div>
+			<a class="Team1 Name"></a>
+			<a class="Team1 AlternateName"></a>
+		</div>
 		<div><a class="Team1 Score"></a></div>
 		<div class="ui-grid-a">
 			<div class="ui-block-a">
@@ -497,11 +538,18 @@
 <div data-role="page" id="Team2ScorePage">
 	<div data-role="header">
 		<a href="#TeamScorePage" data-direction="reverse" data-icon="arrow-l">Score</a>
-		<h1><span class="Team2 Name"></span> Score</h1>
+		<h1>
+			<span class="Team2 Name"></span>
+			<span class="Team2 AlternateName"></span>
+			Score
+		</h1>
 	</div>
 
 	<div data-role="content">
-		<div><a class="Team2 Name"></a></div>
+		<div>
+			<a class="Team2 Name"></a>
+			<a class="Team2 AlternateName"></a>
+		</div>
 		<div><a class="Team2 Score"></a></div>
 		<div class="ui-grid-a">
 			<div class="ui-block-a">
