--- a/html/index.html
+++ b/html/index.html
@@ -2,10 +2,20 @@
 <html><head></head>
 
 <script type="text/javascript" src="/external/jquery/jquery.js"></script>
+<script type="text/javascript" src="/external/jquery-ui/jquery-ui.js"></script>
+<link rel="stylesheet" href="external/jquery-ui/css/default/jquery-ui.css" />
 
 <script type="text/javascript">
 
 $(function() {
+	$("#OverlayDialog").dialog({
+		title: "Overlays",
+		autoOpen: false,
+		modal: true,
+		width: 600,
+		buttons: { Close: function() { $(this).dialog("close"); } }
+	});
+
 	$.get("/version", function(data) { $("#version").html(data); });
 	$.get("/urls", function(data) {
 		var urls = data.trim();
@@ -17,6 +27,10 @@ $(function() {
 			});
 	});
 });
+
+function showOverlays() {
+	$("#OverlayDialog").dialog("open");
+}
 
 </script>
 
@@ -40,10 +54,7 @@ $(function() {
 			<a href="views/scoreboard.html">Main Scoreboard</a><br/>
 			<a href="controls/mobile.html">Mobile Device Operator Controls</a><br/>
 			<a href="controls/media_management.html">Media Management</a><br/>
-			<a href="views/overlay-4x3.html">Video Feed 4x3 Overlay Scoreboard</a><br/>
-			<a href="views/overlay-16x9.html">Video Feed 16x9 Overlay Scoreboard</a><br/>
-			<a href="views/wo.html">WFTDA Styled Video Feed 16x9 Overlay Scoreboard</a><br/>
-			<a href="controls/wo.html">Team Name Controls for WFTDA Styled Overlay Scoreboard</a><br/>
+			<a href="javascript: showOverlays();">Overlays</a><br/>
 			<a href="controls/stream.html">Load/Save Scoreboard "Stream" (beta quality!)</a><br/>
 			<a href="controls/twitter.html">Twitter update controls (beta quality!)</a><br/>
 			<a href="controls/lineups.html">Team Lineup Control Panel (beta quality!)</a><br/>
@@ -77,6 +88,19 @@ $(function() {
 		</td>
 	</tr>
 </table>
+
+<div id="OverlayDialog">
+	<a href='controls/wo.html'>Overlay Controls</a><br/>
+	<br/>
+	<a href='views/overlay-4x3.html'>Video Feed 4x3 Overlay Scoreboard</a><br/>
+	<a href='views/overlay-16x9.html'>Video Feed 16x9 Overlay Scoreboard</a><br/>
+	<a href='views/tcdg_4x3.html'>TCDG Video Feed 4x3 Overlay</a><br/>
+	<a href='views/tcdg_trans.html'>TCDG Video Feed 4x3 Overlay (Partial Transparency)</a><br/>
+	<a href='views/tcdg_trans169.html'>TCDG Video Feed 16x9 Overlay (Partial Transparency)</a><br/>
+	<a href='views/tcdg_pip.html'>TCDG Video Feed Overlay (Picture in Picture)</a><br/>
+	<a href='views/wo.html'>WFTDA Styled Video Feed 16x9 Overlay Scoreboard</a><br/>
+	<a href='views/wg.html'>WFTDA Styled (with logo) Video Feed 16x9 Overlay Scoreboard</a><br/>
+</div>
 
 </body>
 
