--- a/html/controls/wo.html
+++ b/html/controls/wo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Strict//EN">
-<html><head><title>WFTDA Overlay Name Control</title>
-
+<html>
+	<head>
+		<title>WFTDA Overlay Name Control</title>
 <!--
  Copyright (C) 2008-2013 Mr Temper <MrTemper@CarolinaRollergirls.com>, Rob Thomas, and WrathOfJon <crgscorespam@sacredregion.com>
 
@@ -9,23 +10,42 @@
  License version 3 (or later), or the Apache License 2.0, at your option.
  See the file COPYING for details.
 -->
-
-<script type="text/javascript" src="/external/jquery/jquery.js" ></script>
-
-<script type="text/javascript" src="/javascript/scoreboard.js" ></script>
-
-</head>
-
-<body>
-
-<a>Team 1 Name:</a><a id="Team1Name"></a>
-<br/>
-<a>Team 1 Overlay Name:</a><input type=text id="Team1OverlayName"></input>
-<hr/>
-<a>Team 2 Name:</a><a id="Team2Name"></a>
-<br/>
-<a>Team 2 Overlay Name:</a><input type=text id="Team2OverlayName"></input>
-
-</body>
-
+		<script type="text/javascript" src="/external/jquery/jquery.js" ></script>
+		<script type="text/javascript" src="/javascript/scoreboard.js" ></script>
+	</head>
+	<body>
+		<table>
+			<tr>
+				<td>&nbsp;</td>
+				<th><a class="Team1 Name">Team 1</a></th>
+				<th><a class="Team2 Name">Team 2</a></th>
+			</tr>
+			<tr>
+				<td>Overlay Name:</td>
+				<td><input type="text" class="Team1 AlternateName" /></td>
+				<td><input type="text" class="Team2 AlternateName" /></td>
+			</tr>
+			<tr>
+				<td>Foreground:</td>
+				<td><input type="text" class="Team1 overlay_fg" /></td>
+				<td><input type="text" class="Team2 overlay_fg" /></td>
+			</tr>
+			<tr>
+				<td>Background:</td>
+				<td><input type="text" class="Team1 overlay_bg" /></td>
+				<td><input type="text" class="Team2 overlay_bg" /></td>
+			</tr>
+			<tr>
+				<td>Glow/Halo:</td>
+				<td><input type="text" class="Team1 overlay_glow" /></td>
+				<td><input type="text" class="Team2 overlay_glow" /></td>
+			</tr>
+			<tr><td colspan="3">&nbsp;</td></tr>
+			<tr>
+				<td>Overlay Logo</td>
+				<td colspan="2"><select class="Logo"></select></td>
+			</tr>
+		</table>
+		<input type="button" value="Test" onclick="javascript: test();" />
+	</body>
 </html>
