Added release notes for 3.1.0

--- a/html/index.html
+++ b/html/index.html
@@ -81,6 +81,8 @@ function showOverlays() {
 				see <a href="guide.html">the guide</a>.
 			</p>
 
+			<p><a href="release.html">Release Notes</a></p>
+
 			<p id="URLtext">
 				To access this scoreboard from other computers on this network, try one of these URLs:
 				<ul id="URLs"></ul>
