--- a/html/index.html
+++ b/html/index.html
@@ -58,6 +58,7 @@ function showOverlays() {
 			<a href="controls/stream.html">Load/Save Scoreboard "Stream" (beta quality!)</a><br/>
 			<a href="controls/twitter.html">Twitter update controls (beta quality!)</a><br/>
 			<a href="controls/lineups.html">Team Lineup Control Panel (beta quality!)</a><br/>
+			<a href="controls/scoreboard_assist.html">Scoreboard Assistant</a><br/>
 		</td>
 
 		<td>
