--- a/html/index.html
+++ b/html/index.html
@@ -82,6 +82,10 @@ function showOverlays() {
 				see <a href="guide.html">the guide</a>.
 			</p>
 
+			<p>
+				<a href="release.html">Release Notes</a>
+			</p>
+
 			<p id="URLtext">
 				To access this scoreboard from other computers on this network, try one of these URLs:
 				<ul id="URLs"></ul>
