Updated release notes for default operator

--- a/html/release.html
+++ b/html/release.html
@@ -12,6 +12,7 @@
 				<b>Version Dev</b>
 				<ul>
 					<li>Added Scoreboard Assistant controls similar to Lineup controls.  Only allows setting of Jammer and Pivot.</li>
+					<li>Set operator to 'default' if the login dialog box is closed rather than the login button clicked.  Allows for keyboard shortcuts to still be used.</li>
 				</ul>
 			</li>
 			<li>
