When in intermission, if a timeout or official review is started, stop the intermission clock.  Reset and restart the intermission clock at the end of the timeout/official review

--- a/html/release.html
+++ b/html/release.html
@@ -13,6 +13,12 @@
 				<ul>
 					<li>Added Scoreboard Assistant controls similar to Lineup controls.  Only allows setting of Jammer and Pivot.</li>
 					<li>Set operator to 'default' if the login dialog box is closed rather than the login button clicked.  Allows for keyboard shortcuts to still be used.</li>
+					<li>When in intermission, if a timeout or official review is started, stop the intermission clock.  Reset and restart the intermission clock at the end of the timeout/official review</li>
+					<li>Contributors
+						<ul>
+							<li>Michael Mitton</li>
+							<li>Andrew "Keyesboard" Keyes (Scoreboard Assistant screen)</li>
+						</ul>
 				</ul>
 			</li>
 			<li>
