--- a/html/release.html
+++ b/html/release.html
@@ -14,6 +14,7 @@
 					<li>Added Scoreboard Assistant controls similar to Lineup controls.  Only allows setting of Jammer and Pivot.</li>
 					<li>Set operator to 'default' if the login dialog box is closed rather than the login button clicked.  Allows for keyboard shortcuts to still be used.</li>
 					<li>When in intermission, if a timeout or official review is started, stop the intermission clock.  Reset and restart the intermission clock at the end of the timeout/official review</li>
+					<li>Reduced size of Jam Score +- buttons</li>
 					<li>Contributors
 						<ul>
 							<li>Michael Mitton</li>
