--- a/html/release.html
+++ b/html/release.html
@@ -16,6 +16,7 @@
 					<li>When in intermission, if a timeout or official review is started, stop the intermission clock.  Reset and restart the intermission clock at the end of the timeout/official review</li>
 					<li>Reduced size of Jam Score +- buttons</li>
 					<li>Return the team name for %t1Nt and %t2Nt if the Twitter altername name is not set</li>
+					<li>Do not set team lead status from skater positions.</li>
 					<li>Contributors
 						<ul>
 							<li>Michael Mitton</li>
