--- a/html/release.html
+++ b/html/release.html
@@ -17,6 +17,11 @@
 					<li>Reduced size of Jam Score +- buttons</li>
 					<li>Return the team name for %t1Nt and %t2Nt if the Twitter altername name is not set</li>
 					<li>Do not set team lead status from skater positions.</li>
+					<li>Convert JQuery animations to CSS3 animations
+						<ul>
+							<li>ScoreBoard Display</li>
+						</ul>
+					</li>
 					<li>Contributors
 						<ul>
 							<li>Michael Mitton</li>
