Scoreboard display requests the browser goes to fullscreen on click anywhere in the scoreboard display

--- a/html/release.html
+++ b/html/release.html
@@ -18,6 +18,7 @@
 					<li>Return the team name for %t1Nt and %t2Nt if the Twitter altername name is not set</li>
 					<li>Do not set team lead status from skater positions.</li>
 					<li>Add option to pad in the sides of the main scoreboard display to allow for odd width projection environments.<li>
+					<li>Scoreboard display requests the browser goes to fullscreen on click anywhere in the scoreboard display.<li>
 					<li>Convert JQuery animations to CSS3 animations
 						<ul>
 							<li>ScoreBoard Display</li>
