--- a/html/release.html
+++ b/html/release.html
@@ -9,7 +9,7 @@
 		</center>
 		<ul>
 			<li>
-				<b>Version Dev</b>
+				<b>Version 3.2.0</b>
 				<ul>
 					<li>Added Scoreboard Assistant controls similar to Lineup controls.  Only allows setting of Jammer and Pivot.</li>
 					<li>Set operator to 'default' if the login dialog box is closed rather than the login button clicked.  Allows for keyboard shortcuts to still be used.</li>
