--- a/html/release.html
+++ b/html/release.html
@@ -17,8 +17,8 @@
 					<li>Reduced size of Jam Score +- buttons</li>
 					<li>Return the team name for %t1Nt and %t2Nt if the Twitter altername name is not set</li>
 					<li>Do not set team lead status from skater positions.</li>
-					<li>Add option to pad in the sides of the main scoreboard display to allow for odd width projection environments.<li>
-					<li>Scoreboard display requests the browser goes to fullscreen on click anywhere in the scoreboard display.<li>
+					<li>Add option to pad in the sides of the main scoreboard display to allow for odd width projection environments.</li>
+					<li>Scoreboard display requests the browser goes to fullscreen on click anywhere in the scoreboard display.</li>
 					<li>Convert JQuery animations to CSS3 animations
 						<ul>
 							<li>ScoreBoard Display</li>
@@ -29,6 +29,7 @@
 							<li>Michael Mitton</li>
 							<li>Andrew "Keyesboard" Keyes (Scoreboard Assistant screen)</li>
 						</ul>
+					</li>
 				</ul>
 			</li>
 			<li>
