Fixed Undo Controls

--- a/html/release.html
+++ b/html/release.html
@@ -9,6 +9,12 @@
 		</center>
 		<ul>
 			<li>
+				<b>Version Dev</b>
+				<ul>
+					<li>Fixed Undo Controls</li>
+				</ul>
+			</li>
+			<li>
 				<b>Version 3.2.0</b>
 				<ul>
 					<li>Added Scoreboard Assistant controls similar to Lineup controls.  Only allows setting of Jammer and Pivot.</li>
