Fixed clock +1/-1 controls

--- a/html/release.html
+++ b/html/release.html
@@ -11,7 +11,7 @@
 			<li>
 				<b>Version Dev</b>
 				<ul>
-					<li>Fixed Undo Controls</li>
+					<li>Fixed Undo Controls and Clock +1/-1 Controls</li>
 				</ul>
 			</li>
 			<li>
