--- a/html/release.html
+++ b/html/release.html
@@ -9,7 +9,7 @@
 		</center>
 		<ul>
 			<li>
-				<b>Version Dev</b>
+				<b>Version 3.2.1</b>
 				<ul>
 					<li>Fixed Undo Controls and Clock +1/-1 Controls</li>
 				</ul>
