Removed Passes, Added Star Pass (and pivot) to scoreboard controls

--- a/html/release.html
+++ b/html/release.html
@@ -12,6 +12,8 @@
 				<b>Version 3.2.1</b>
 				<ul>
 					<li>Fixed Undo Controls and Clock +1/-1 Controls</li>
+					<li>Removed Passes</li>
+					<li>Added Star Pass functions to scoreboard controls</li>
 				</ul>
 			</li>
 			<li>
