Sync clocks to the running master clock (Period, Timeout, Intermission) rather than the system clock.

--- a/html/release.html
+++ b/html/release.html
@@ -14,6 +14,7 @@
 					<li>Fixed Undo Controls and Clock +1/-1 Controls</li>
 					<li>Removed Passes</li>
 					<li>Added Star Pass functions to scoreboard controls</li>
+					<li>Sync clocks to the running master clock (Period, Timeout, Intermission) rather than the system clock.</li>
 				</ul>
 			</li>
 			<li>
