--- a/html/release.html
+++ b/html/release.html
@@ -9,12 +9,18 @@
 		</center>
 		<ul>
 			<li>
+				<b>Version Dev</b>
+				<ul>
+					<li>Added Star Pass functions to scoreboard controls</li>
+					<li>Sync clocks to the running master clock (Period, Timeout, Intermission) rather than the system clock.</li>
+					<li>Initial Android Support (alpha) for scoreboard server.  Requires Android 4.0.3 or later.</li>
+				</ul>
+			</li>
+			<li>
 				<b>Version 3.2.1</b>
 				<ul>
 					<li>Fixed Undo Controls and Clock +1/-1 Controls</li>
 					<li>Removed Passes</li>
-					<li>Added Star Pass functions to scoreboard controls</li>
-					<li>Sync clocks to the running master clock (Period, Timeout, Intermission) rather than the system clock.</li>
 				</ul>
 			</li>
 			<li>
