--- a/html/release.html
+++ b/html/release.html
@@ -11,9 +11,12 @@
 			<li>
 				<b>Version Dev</b>
 				<ul>
-					<li>Added Star Pass functions to scoreboard controls</li>
+					<li>Added Star Pass functions to scoreboard controls.</li>
 					<li>Sync clocks to the running master clock (Period, Timeout, Intermission) rather than the system clock.</li>
 					<li>Initial Android Support (alpha) for scoreboard server.  Requires Android 4.0.3 or later.</li>
+					<li>Change Lead from Lead/No Lead to Lead/No Lead/Lost Lead and set Lost Lead automatically when lead jammer sent to the box.</li>
+					<li>Star Pass automatically sets Lost Lead if jammer was Lead.</li>
+					<li>Add Penalty Box controls to Jammer and Pivot on operator controls.</li>
 				</ul>
 			</li>
 			<li>
