--- a/html/release.html
+++ b/html/release.html
@@ -9,6 +9,11 @@
 		</center>
 		<ul>
 			<li>
+				<b>Version Dev</b>
+				<ul>
+					<li>Show Undo Controls By Default</li>
+					<li>Fix for Safari showing running clocks on the scoreboard while animations in progress</li>
+				</ul>
 				<b>Version 3.2.1</b>
 				<ul>
 					<li>Fixed Undo Controls and Clock +1/-1 Controls</li>
