--- a/html/release.html
+++ b/html/release.html
@@ -9,7 +9,7 @@
 		</center>
 		<ul>
 			<li>
-				<b>Version Dev</b>
+				<b>Version 3.2.2</b>
 				<ul>
 					<li>Show Undo Controls By Default</li>
 					<li>Fix for Safari showing running clocks on the scoreboard while animations in progress</li>
