Update release log

--- a/html/release.html
+++ b/html/release.html
@@ -9,6 +9,13 @@
 		</center>
 		<ul>
 			<li>
+				<b>Version 3.2.3</b>
+				<ul>
+					<li>Fix undo controls from freezing system when the incorrect undo was performed.</li>
+					<li>Pause videos on switching views</li>
+				</ul>
+			</li>
+			<li>
 				<b>Version 3.2.2</b>
 				<ul>
 					<li>Show Undo Controls By Default</li>
