Added Slim Top Bar Video Overlay

--- a/html/index.html
+++ b/html/index.html
@@ -105,6 +105,7 @@ function showOverlays() {
 	<a href='views/tcdg_pip.html'>TCDG Video Feed Overlay (Picture in Picture)</a><br/>
 	<a href='views/wo.html'>WFTDA Styled Video Feed 16x9 Overlay Scoreboard</a><br/>
 	<a href='views/wg.html'>WFTDA Styled (with logo) Video Feed 16x9 Overlay Scoreboard</a><br/>
+	<a href='views/ddu-top.html'>Slim Top Bar Video Feed Overlay (16x9)</a><br/>
 </div>
 
 </body>
