--- a/html/release.html
+++ b/html/release.html
@@ -9,6 +9,10 @@
 		</center>
 		<ul>
 			<li>
+				<b>Version next</b>
+				<ul>
+					<li>Added DDU Top Overlay (Jared Quinn - Flat Track Protocol)</li>
+				</ul>
 				<b>Version 3.2.3</b>
 				<ul>
 					<li>Fix undo controls from freezing system when the incorrect undo was performed.</li>
