--- a/html/release.html
+++ b/html/release.html
@@ -11,7 +11,8 @@
 			<li>
 				<b>Version next</b>
 				<ul>
-					<li>Added DDU Top Overlay (Jared Quinn - Flat Track Protocol)</li>
+					<li>Added DDU Top Overlay (Jared Quinn)</li>
+					<li>Updated WFTDA Style Overlays with team colors (Jon Fox)</li>
 				</ul>
 				<b>Version 3.2.3</b>
 				<ul>
