--- a/html/index.html
+++ b/html/index.html
@@ -52,6 +52,7 @@ function showOverlays() {
 			<h3>Scoreboard view/control pages</h3>
 			<a href="controls/operator.html">Main Operator Control Panel</a><br/>
 			<a href="views/scoreboard.html">Main Scoreboard</a><br/>
+			<a href="controls/rulesets.html">Ruleset Editor</a><br/>
 			<a href="controls/mobile.html">Mobile Device Operator Controls</a><br/>
 			<a href="controls/media_management.html">Media Management</a><br/>
 			<a href="javascript: showOverlays();">Overlays</a><br/>
