Add delete to ruleset editor

--- a/html/controls/rulesets.html
+++ b/html/controls/rulesets.html
@@ -33,9 +33,15 @@
 			<p>
 				<button class="Cancel">Cancel</button>
 				<button class="Update">Update</button>
+				<button class="Delete">Delete</button>
 			</p>
 			<input type="text" id="name" size="40" />
 			<div class="rules"></div>
+			<p>
+				<button class="Cancel">Cancel</button>
+				<button class="Update">Update</button>
+				<button class="Delete">Delete</button>
+			</p>
 		</div>
 	</body>
 </html>
