--- a/html/controls/rulesets.html
+++ b/html/controls/rulesets.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Rule Set Editor</title>
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
-		<script type="text/javascript" src="/javascript/json.js"></script>
+		<script type="text/javascript" src="/json/core.js"></script>
 	</head>
 	<body>
 		<div class="rulesets">
