Updated index file and release notes

--- a/html/release.html
+++ b/html/release.html
@@ -17,6 +17,7 @@
 					<li>Change Lead from Lead/No Lead to Lead/No Lead/Lost Lead and set Lost Lead automatically when lead jammer sent to the box.</li>
 					<li>Star Pass automatically sets Lost Lead if jammer was Lead.</li>
 					<li>Add Penalty Box controls to Jammer and Pivot on operator controls.</li>
+					<li>Implement Scoreboard view as a Websocket/JSON interface.</li>
 				</ul>
 			</li>
 			<li>
