Initial Penalty Tracker screen

--- a/html/index.html
+++ b/html/index.html
@@ -61,6 +61,8 @@ function showOverlays() {
 			<a href="controls/twitter.html">Twitter update controls (beta quality!)</a><br/>
 			<a href="controls/lineups.html">Team Lineup Control Panel (beta quality!)</a><br/>
 			<a href="controls/scoreboard_assist.html">Scoreboard Assistant</a><br/>
+			<br />
+			<a href="controls/pt/">Penalty Tracker</a><br/>
 		</td>
 
 		<td>
