--- a/html/release.html
+++ b/html/release.html
@@ -18,6 +18,7 @@
 					<li>Star Pass automatically sets Lost Lead if jammer was Lead.</li>
 					<li>Add Penalty Box controls to Jammer and Pivot on operator controls.</li>
 					<li>Implement Scoreboard view as a Websocket/JSON interface.</li>
+					<li>Penalty Tracker screen</li>
 				</ul>
 			</li>
 			<li>
