Updated release notes

--- a/html/release.html
+++ b/html/release.html
@@ -19,6 +19,7 @@
 					<li>Add Penalty Box controls to Jammer and Pivot on operator controls.</li>
 					<li>Implement Scoreboard view as a Websocket/JSON interface.</li>
 					<li>Penalty Tracker screen</li>
+					<li>New interactive overlay with stat screens</li>
 				</ul>
 			</li>
 			<li>
