Added GREEN/CAMERA Options Fixed Timeout Bugs

--- a/html/index.html
+++ b/html/index.html
@@ -107,7 +107,8 @@ function showOverlays() {
 	<a href='views/overlays/standard/overlay-16x9.html'>Video Feed 16x9</a><br/>
 	<a href='views/overlays/standard/overlay-top.html'>Top Bar 4x3/16x9</a><br/>
 	<a href='views/overlays/interactive/index.html'>Interactive Overlay 16x9/720p</a>
-		&nbsp;&nbsp;&nbsp;<a href='views/overlays/interactive/admin.html'>(Admin Page)</a><br/>
+		&nbsp;<a href='views/overlays/interactive/index.html?camera'>(Camera Underlay)</a>
+		&nbsp;&nbsp;&nbsp;<a style="color: green;" href='views/overlays/interactive/admin.html'>(Admin Page)</a><br/>
 	<a href='views/overlays/tcdg/overlay-4x3.html'>TCDG Video Feed 4x3</a><br/>
 	<a href='views/overlays/tcdg/overlay-4x3-trans.html'>TCDG Video Feed 4x3 (Partial Transparency)</a><br/>
 	<a href='views/overlays/tcdg/overlay-16x9-trans.html'>TCDG Video Feed 16x9 (Partial Transparency)</a><br/>
